# db4dev-generator

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  tox.ini
db/: create-database.sql
scripts/: entrypoint.sh  initialize-db.sh
